@@ -754,6 +754,7 @@ sn -R $(TargetPath) D:\slimdxKey.snk
     <ClCompile Include="..\source\ComObject.cpp" />
     <ClCompile Include="..\source\CompilationException.cpp" />
     <ClCompile Include="..\source\Configuration.cpp" />
+    <ClCompile Include="..\source\multimedia\XWMAStream.cpp" />
     <ClCompile Include="..\source\ObjectTable.cpp" />
     <ClCompile Include="..\source\Result.cpp" />
     <ClCompile Include="..\source\SlimDXException.cpp" />
@@ -1433,6 +1434,7 @@ sn -R $(TargetPath) D:\slimdxKey.snk
     <ClInclude Include="..\source\Configuration.h" />
     <ClInclude Include="..\source\Enums.h" />
     <ClInclude Include="..\source\InternalHelpers.h" />
+    <ClInclude Include="..\source\multimedia\XWMAStream.h" />
     <ClInclude Include="..\source\ObjectTable.h" />
     <ClInclude Include="..\source\Result.h" />
     <ClInclude Include="..\source\SlimDXException.h" />
